@@ -1,6 +1,12 @@
 2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
-	[build] Move `getuid', `getpwuid' checks to configure.in
+	[build] Move `mktemp' check to configure.in.
+
+	* configure.in (mktemp): Add to `AC_CHECK_FUNCS_ONCE'.
+
+2010-02-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Move `getuid', `getpwuid' checks to configure.in.
 
 	* configure.in (getpwuid, getuid): Add to `AC_CHECK_FUNCS_ONCE'.
 
